css/z_custom.css
.fb-share-button {
	transform: scale(2);
}
.twitter-share-button {
	transform: scale(2);
}
.fb-marg {
	margin-right: 50px;
}
.tw-marg {
	margin-left: 50px;
}
.fb_iframe_widget_fluid {
    display: block;
}
@media (max-width: 479px) {
	.fb-share-button {
		transform: scale(1);
	}
	.twitter-share-button {
		transform: scale(1);
	}
	.fb-marg {
		margin-right: 20px;
	}
	.tw-marg {
		margin-left: 20px;
	}
}

